# dexforce-cAm-sPArrOw

C/: example.cpp  open_cam3d.h
C#/: 3.json  example.cs
C#/KW_MINI_Camera_Color/: Program.cs
CPP/: color_example.cpp  xcamera.h
SPARROW-master/: CMakeLists.txt  build.bat  build_firmware.bat
SPARROW-master/calibration/: CMakeLists.txt  DetectCCTag.cpp  calibrate_function.cpp  calibrate_function.h  calibration.cpp
SPARROW-master/cmd/: CMakeLists.txt  cmd.cpp  detect_chessboard.cpp  detect_chessboard.h  projector_sharpness.cpp  projector_sharpness.h  warm-up.txt
SPARROW-master/cpp/: CMakeLists.txt  DetectCCTag.cpp  DetectCCTag.h  LookupTableFunction.cpp  LookupTableFunction.h  calibrate_function.cpp  calibrate_function.h  calibration.cpp  calibration.h  encode.cpp  neutral.py  scamera.h  sparrow_camera.cpp  sparrow_camera.h  support_function.cpp  support_function.h
SPARROW-master/cpp_example/: CMakeLists.txt  cpp_example.cpp  cpp_example.vcxproj  cpp_example.vcxproj.filters  scamera.h
SPARROW-master/example/: CMakeLists.txt  example.cpp  example.vcxproj  example.vcxproj.filters  sparrow_sdk_run.h
SPARROW-master/firmware_CPU/: Readme.txt
SPARROW-master/firmware_CPU/CPU/camera_server_CPU/: CMakeLists.txt  FilterModule.cpp  FilterModule.h  LookupTableFunction.cpp  LookupTableFunction.h  camera_server_new.cpp  encode.cpp  encode.h  management.cpp  management.h  merge_hdr.cpp  merge_hdr.h  minsw.cpp  minsw.h  reconstruct.cpp  reconstruct.h  scan3d.cpp  scan3d.h
SPARROW-master/firmware_GPU/: Readme.txt
SPARROW-master/firmware_GPU/GPU/camera_server/: CMakeLists.txt  LookupTableFunction.cpp  camera.h  camera_galaxy.cpp  camera_galaxy.h  camera_server_new.cpp  critical zone.cpp  critical zone.h  filter_module.cuh  lightcrafter3010.cpp  lightcrafter3010.h  management.cu  management.cuh  merge_hdr.cuh  merge_repetition.cu  minsw.cu  power_controller.h  protocol.h  reconstruct.cu  scan3d.cpp  scan3d.h  set_calib_looktable.cpp  socket_tcp.cpp
SPARROW-master/functest/: CMakeLists.txt  case.h  help.cpp  status.h
SPARROW-master/gui/: CMakeLists.txt  PrecisionTest.h  about.h  about_gui.cpp  about_gui.h  calibration_param_gui.cpp  calibration_param_gui.h  camera_capture_gui.cpp  camera_capture_gui.ui  camera_gui.cpp  camera_gui.h  camera_gui.ui  cameracapturegui.h  dexforce_camera_gui.h  file_io_function.cpp  file_io_function.h  outlier_removal_gui.cpp  outlier_removal_gui.h  resource.h  save_gui.cpp  save_gui.h  select_calibration_board_gui.cpp  select_calibration_board_gui.h  settings_file_function.cpp  settings_file_function.h  update_firmware_gui.cpp  update_firmware_gui.h  update_opencam3d.cpp  update_opencam3d.h  waiting_gui.cpp  waiting_gui.h
SPARROW-master/release/: release.md
SPARROW-master/sdk/: CMakeLists.txt  DF8.cpp  DF8.h  camera_status.h  enums.h  socket_tcp.cpp  sparrow_sdk.cpp  sparrow_sdk.h
SPARROW-master/src/: reconstruct.cpp  reconstruct.h  solution.cpp  solution.h
SPARROW-master/test/: CMakeLists.txt  encode.cpp  encode.h  reconstruct.cpp  reconstruct.h  solution.cpp  solution.h  test.cpp
SPARROW-master/update/: main.cpp  update_opencam3d.cpp
SPARROW-master/version/: build.bat  build.sh  version.json
python/: KW-MINI系列相机python接口文档.docx  readme.md
python/python3.10/: camera.pyd  capture_color.py  example_python.py
